# horror-story

./: .gitignore  .yamllint.yml  AGENTS.md  CLAUDE.md  CODEX.md  README.md  RECONCILIATION_SUMMARY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  spec-task.yml
.github/workflows/: ci.yml  spec-lint.yml
backlog/issues/: 001-scaffold.md  002-story-parser.md  003-script-gen.md  004-tts-adapter.md  005-image-adapter.md  006-motion-adapter.md  006-typography.md  007-audio-adapter.md  007-motion-adapter.md  008-audio-adapter.md  008-typography.md  008b-timeline-planner.md  009-compositor.md  010-renderer.md  011-cli.md  012-ci.md  013-sidecar-relative-paths.md  014-adapter-factory-wiring.md  015-mood-pacing.md  016-kokoro-tts.md  017-real-scene-run.md  018-sprint03-checkpoint.md  019-segment-size-limit.md  020-scene-regen-run-dir-mismatch.md  021-compositor-mono-stereo-audio.md  022-spec-typography-after-timeline.md  023-typography-per-segment-pngs.md  024-compositor-timed-overlays.md  025-timed-typography-e2e.md  026-mflux-image-adapter.md  (+11 more)
docs/: strategic-drift-analysis-ru.md
spec/: MVP.md  MVP_PLUS.md  PIPELINE.md  README.md  TECHNICAL_PLAN.md  constitution.md
tests/: test_audio.py  test_audio_loop.py  test_cli.py  test_cli_image_prompt.py  test_compositor.py  test_config.py  test_image.py  test_image_mflux.py  test_kokoro_tts.py  test_manifest.py  test_metrics.py  test_motion.py  test_parse.py  test_renderer.py  test_scaffold.py  test_schemas.py  test_script.py  test_timeline.py  test_translate.py  test_tts.py  test_typography.py
(+72 files in other folders)
